--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -287,48 +287,6 @@
     "vedleggsliste.ingenLegeerklæringLastetOpp": "Ingen vedlegg er lastet opp",
     "vedleggsliste.ingenSamværsavtaleLastetOpp": "Ingen vedlegg er lastet opp",
 
-    "fieldvalidation.påkrevd": "Feltet er påkrevd",
-    "fieldvalidation.fødselsnummer.11siffer": "Fødselsnummeret må bestå av 11 siffer",
-    "fieldvalidation.fødselsnummer.ugyldig": "Fødselsnummeret er ugyldig",
-    "fieldvalidation.navn.maksAntallTegn": "Navnet kan være maks {maxNumOfLetters} tegn",
-    "fieldvalidation.relasjon.maksAntallTegn": "Din relasjon til barnet kan maks være beskrevet på {maxNumOfLetters} tegn",
-    "fieldvalidation.fradato.merEnnTreÅr": "Du kan ikke søke om omsorgspenger for en periode som er mer enn tre år tilbake i tid",
-    "fieldvalidation.fradato.erEtterTildato": "Fra-datoen kan ikke være senere enn til-datoen",
-    "fieldvalidation.tildato.merEnnTreÅr": "Du kan ikke søke om omsorgspenger for en periode som er mer enn tre år tilbake i tid",
-    "fieldvalidation.tildato.erFørFradato": "Til-datoen kan ikke være tidligere enn fra-datoen",
-    "fieldvalidation.legeerklæring.mangler": "Du må laste opp en legeerklæring",
-    "fieldvalidation.legeerklæring.forMangeFiler": "Du kan maksimalt laste opp 3 bilder",
-    "fieldvalidation.samværsavtale.mangler": "Du må laste opp en avtale",
-    "fieldvalidation.samværsavtale.forMangeFiler": "Du kan maksimalt laste opp 3 bilder",
-    "fieldvalidation.utenlandsopphold_ikke_registrert": "Du har ikke registrert noen utenlandsopphold for perioden",
-    "fieldvalidation.utenlandsopphold_overlapper": "Ett eller flere av utenlandsoppholdene har datoer som overlapper",
-    "fieldvalidation.utenlandsopphold_utenfor_periode": "Ett eller flere av utenlandsoppholdene er utenfor tillatt tidsrom",
-    "fieldvalidation.inntektsendring.ingen_endringer_spesifisert": "Du må legge til minst én endring under.",
-    "fieldvalidation.saturday_and_sunday_not_possible_periode": "En periode kan ikke starte eller slutte på en lørdag eller søndag.",
-    "fieldvalidation.saturday_and_sunday_not_possible_dag": "Fravær kan ikke registreres på lørdag eller søndag",
-
-    "fieldvalidation.fraværsperioder_mangler": "Du har ikke lagt til dager med fullt fravær",
-    "fieldvalidation.fraværsperioder_overlapper": "Ett eller flere av periodene har datoer som overlapper",
-    "fieldvalidation.fraværsperioder_utenfor_periode": "En eller flere av periodene er utenfor tillatt tidsrom",
-    "fieldvalidation.fraværsperioder_overlapper_med_fraværsdager": "En eller flere perioder overlapper med registrerte dager med delvis fravær",
-    "fieldvalidation.dager_med_fravær_ugyldig_dag": "En eller flere av dagene har ugyldige verdier",
-    "fieldvalidation.dager_med_fravær_mangler": "Du har ikke lagt til dager med delvis fravær",
-    "fieldvalidation.dager_med_fravær_like": "En eller flere dager har samme dato",
-    "fieldvalidation.dager_med_for_mange_timer": "En eller flere dager har for mange timer. 7,5 timer er det meste som er gyldig",
-    "fieldvalidation.dager_med_fravær_utenfor_periode": "En eller flere dager er utenfor gyldig tidsperiode",
-    "fieldvalidation.dager_med_fravær_overlapper_perioder": "En eller flere dager overlapper med registrerte perioder",
-    "fieldvalidation.timer_ikke_tall": "Verdien må være mellom 0,5 og 7,5 timer",
-    "fieldvalidation.timer_for_mange_timer": "Verdien må være mellom 0,5 og 7,5 timer",
-    "fieldvalidation.dato_utenfor_gyldig_tidsrom": "Dato er utenfor gyldig tidsperiode",
-    "fieldvalidation.tom_er_før_fom": "Til dato kan ikke være før fra dato",
-    "fieldvalidation.ingen_dokumenter": "Ingen vedlegg er lastet opp",
-    "fieldvalidation.for_mange_dokumenter": "For mange dokumenter er lastet opp",
-    "fieldvalidation.samlet_storrelse_for_hoy": "Total samlet størrelse for dokumentene du har lastet opp overstiger grensen på 24Mb.",
-    "fieldvalidation.fraværPeriodeIkkeSammeÅrstall": "Du har lagt til fravær som er i flere år. En søknad kan kun inneholde fravær i ett år.",
-    "fieldvalidation.frilans_startEtterSlutt": "Datoen du sluttet som frilanser kan ikke være før datoen du startet",
-    "fieldvalidation.frilans_startEtterDagensDato": "Datoen for når du startet som frilanser, kan ikke være frem i tid",
-    "fieldvalidation.harDekketTiFørsteDagerSelv_påkrevd": "Du må svare på om du har dekket de ti første dagene selv",
-
     "avbrytSøknadDialog.avbrytSøknadLabel": "Ja, avbryt søknad",
     "avbrytSøknadDialog.fortsettSøknadLabel": "Nei",
     "avbrytSøknadDialog.intro": "Det du har fylt ut i søknaden blir slettet, og du kommer tilbake til velkomstsiden.",
@@ -462,5 +420,74 @@
     "frilanser.summary.jobberFortsatt.header": "Jobber du fortsatt som frilanser?",
     "frilanser.summary.nårSluttet.header": "Når sluttet du som frilanser?",
 
-    "summary.andreIntekter.header": "Andre utbetalinger"
+    "summary.andreIntekter.header": "Andre utbetalinger",
+
+    "fieldvalidation.påkrevd": "Feltet er påkrevd",
+    "fieldvalidation.fødselsnummer.11siffer": "Fødselsnummeret må bestå av 11 siffer",
+    "fieldvalidation.fødselsnummer.ugyldig": "Fødselsnummeret er ugyldig",
+    "fieldvalidation.navn.maksAntallTegn": "Navnet kan være maks {maxNumOfLetters} tegn",
+    "fieldvalidation.relasjon.maksAntallTegn": "Din relasjon til barnet kan maks være beskrevet på {maxNumOfLetters} tegn",
+    "fieldvalidation.fradato.merEnnTreÅr": "Du kan ikke søke om omsorgspenger for en periode som er mer enn tre år tilbake i tid",
+    "fieldvalidation.fradato.erEtterTildato": "Fra-datoen kan ikke være senere enn til-datoen",
+    "fieldvalidation.tildato.merEnnTreÅr": "Du kan ikke søke om omsorgspenger for en periode som er mer enn tre år tilbake i tid",
+    "fieldvalidation.tildato.erFørFradato": "Til-datoen kan ikke være tidligere enn fra-datoen",
+    "fieldvalidation.legeerklæring.mangler": "Du må laste opp en legeerklæring",
+    "fieldvalidation.legeerklæring.forMangeFiler": "Du kan maksimalt laste opp 3 bilder",
+    "fieldvalidation.samværsavtale.mangler": "Du må laste opp en avtale",
+    "fieldvalidation.samværsavtale.forMangeFiler": "Du kan maksimalt laste opp 3 bilder",
+    "fieldvalidation.utenlandsopphold_ikke_registrert": "Du har ikke registrert noen utenlandsopphold for perioden",
+    "fieldvalidation.utenlandsopphold_overlapper": "Ett eller flere av utenlandsoppholdene har datoer som overlapper",
+    "fieldvalidation.utenlandsopphold_utenfor_periode": "Ett eller flere av utenlandsoppholdene er utenfor tillatt tidsrom",
+    "fieldvalidation.inntektsendring.ingen_endringer_spesifisert": "Du må legge til minst én endring under.",
+    "fieldvalidation.saturday_and_sunday_not_possible_periode": "En periode kan ikke starte eller slutte på en lørdag eller søndag.",
+    "fieldvalidation.saturday_and_sunday_not_possible_dag": "Fravær kan ikke registreres på lørdag eller søndag",
+
+    "fieldvalidation.fraværsperioder_mangler": "Du har ikke lagt til dager med fullt fravær",
+    "fieldvalidation.fraværsperioder_overlapper": "En eller flere av periodene har datoer som overlapper",
+    "fieldvalidation.fraværsperioder_utenfor_periode": "En eller flere av periodene er utenfor tillatt tidsrom",
+    "fieldvalidation.fraværsperioder_overlapper_med_fraværsdager": "En eller flere perioder overlapper med registrerte dager med delvis fravær",
+    "fieldvalidation.dager_med_fravær_ugyldig_dag": "En eller flere av dagene har ugyldige verdier",
+    "fieldvalidation.dager_med_fravær_mangler": "Du har ikke lagt til dager med delvis fravær",
+    "fieldvalidation.dager_med_fravær_like": "En eller flere dager har samme dato",
+    "fieldvalidation.dager_med_for_mange_timer": "En eller flere dager har for mange timer. 7,5 timer er det meste som er gyldig",
+    "fieldvalidation.dager_med_fravær_utenfor_periode": "En eller flere dager er utenfor gyldig tidsperiode",
+    "fieldvalidation.dager_med_fravær_overlapper_perioder": "En eller flere dager overlapper med registrerte perioder",
+    "fieldvalidation.timer_ikke_tall": "Verdien må være mellom 0,5 og 7,5 timer",
+    "fieldvalidation.timer_for_mange_timer": "Verdien må være mellom 0,5 og 7,5 timer",
+    "fieldvalidation.dato_utenfor_gyldig_tidsrom": "Dato er utenfor gyldig tidsperiode",
+    "fieldvalidation.tom_er_før_fom": "Til dato kan ikke være før fra dato",
+    "fieldvalidation.ingen_dokumenter": "Ingen vedlegg er lastet opp",
+    "fieldvalidation.for_mange_dokumenter": "For mange dokumenter er lastet opp",
+    "fieldvalidation.samlet_storrelse_for_hoy": "Total samlet størrelse for dokumentene du har lastet opp overstiger grensen på 24Mb.",
+    "fieldvalidation.fraværPeriodeIkkeSammeÅrstall": "Du har lagt til fravær som er i flere år. En søknad kan kun inneholde fravær i ett år.",
+
+    "validation.harDekketTiFørsteDagerSelv.yesOrNoIsUnanswered": "Du må svare på om du har dekket de ti første dagene selv",
+    "validation.harPerioderMedFravær.yesOrNoIsUnanswered": "Feltet er påkrevd",
+    "validation.fraværPerioder.listIsEmpty": "Du har ikke lagt til dager med fullt fravær",
+    "validation.fraværDager.listIsEmpty": "Du har ikke lagt til dager med delvis fravær",
+    "validation.harDagerMedDelvisFravær.yesOrNoIsUnanswered": "Feltet er påkrevd",
+    "validation.perioder_harVærtIUtlandet.yesOrNoIsUnanswered": "Feltet er påkrevd",
+    "validation.perioder_utenlandsopphold.listIsEmpty": "Når du har valgt at du har utenlandsopphold i perioden med fravær, må du legge til minst ett utenlandsopphold",
+    "validation.harSøktAndreUtbetalinger.yesOrNoIsUnanswered": "Feltet er påkrevd",
+    "validation.andreUtbetalinger.listIsEmpty": "Du har ikke valgt hvilke andre utbetalinger du har søkt om",
+    "validation.frilans_erFrilanser.yesOrNoIsUnanswered": "Feltet er påkrevd",
+    "validation.frilans_startdato.noValue": "Feltet er påkrevd",
+    "validation.frilans_startdato.invalidDateFormat": "Ugyldig datoformat. Formatet må være dd.mm.åååå",
+    "validation.frilans_startdato.dateAfterMax": "Datoen for når du startet som frilanser, kan ikke være frem i tid",
+    "validation.frilans_sluttdato.noValue": "Feltet er påkrevd",
+    "validation.frilans_sluttdato.invalidDateFormat": "Ugyldig datoformat. Formatet må være dd.mm.åååå",
+    "validation.frilans_sluttdato.dateAfterMax": "Datoen for når du sluttet som frilanser, kan ikke være før frem i tid",
+    "validation.frilans_sluttdato.dateBeforeMin": "Datoen for når du sluttet som frilanser, kan ikke være før datoen du startet",
+    "validation.frilans_jobberFortsattSomFrilans.yesOrNoIsUnanswered": "Feltet er påkrevd",
+    "validation.selvstendig_erSelvstendigNæringsdrivende.yesOrNoIsUnanswered": "Feltet er påkrevd",
+    "validation.selvstendig_harFlereVirksomheter.yesOrNoIsUnanswered": "Feltet er påkrevd",
+    "validation.selvstendig_virksomhet.noValue": "Du har ikke registrert noen virksomhet",
+    "validation.harFosterbarn.yesOrNoIsUnanswered": "Feltet er påkrevd",
+    "validation.fosterbarn.listIsEmpty": "Du har ikke registrert noen fosterbarn",
+    "validation.harBoddUtenforNorgeSiste12Mnd.yesOrNoIsUnanswered": "Feltet er påkrevd",
+    "validation.utenlandsoppholdSiste12Mnd.fieldvalidation.utenlandsopphold_ikke_registrert": "Du har ikke registrert noen utenlandsopphold for perioden",
+    "validation.skalBoUtenforNorgeNeste12Mnd.yesOrNoIsUnanswered": "Feltet er påkrevd",
+    "validation.utenlandsoppholdNeste12Mnd.fieldvalidation.utenlandsopphold_ikke_registrert": "Du har ikke registrert noen utenlandsopphold for perioden",
+    "validation.harBekreftetOpplysninger.notChecked": "Du må bekrefte opplysningene"
+
 }
